--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,33 +1,59 @@
 .header {
     width: 100%; 
+    margin: 0;
     background-color: #ffffff;
     box-sizing: border-box;
     text-align: center;
-    border: 3px #cccccc;
+    border-bottom: 3px solid #cccccc;
+    overflow: hidden;
     }
 
 body {
     color: #777777;
     background-color: #ffffff;
     margin: 0% 15% 0% 15%;
-    background-image: url(../images/prism.png)
+    background-image: url(../images/prism.png);
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
 
+p {
+    color: #777777;
+    background-color: #ffffff;
+    margin: 0% 15% 0% 15%; 
+    max-width: 960px;
+    min-width: 960px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+      
 }
 
 h1 {
     background-color: #4aaaa5;
     color: #ffffff;
-    height: 50px;
+    height: 100%;
     width: 17%;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 h2 {
     color: #4aaaa5;
+    background-color: #ffffff;
+    font-weight: bolder;
+    font-size: 30px;
+    border-bottom: #cccccc 3px solid;
+    padding: 0px 0px 20px 0px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+
 }
 
 div {
-    border:#dddddd; 
-    max-width: width 960px;
+    text-align: left;
+    border:2px solid #dddddd; 
+    background-color: #ffffff;
+    max-width: 960px;
+    padding: 25px;
+    margin: 25px;
+    float: left;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 .links {
@@ -35,4 +61,10 @@ div {
     margin: 10px;
     text-decoration: none;
     color: #777777; 
+}
+
+img { max-width: 200px;
+        max-height: 200px;
+        float: left;
+        padding: 5px;
 }
