--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,13 @@
-.header {
-    width: 100%; 
-    margin: 0;
+div {
+    text-align: left;
+    border:2px solid #dddddd; 
     background-color: #ffffff;
-    box-sizing: border-box;
-    text-align: center;
-    border-bottom: 3px solid #cccccc;
-    overflow: hidden;
-    }
+    max-width: 960px;
+    padding: 25px;
+    margin: 25px 0px 25px 0px;
+    float: left;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
 
 body {
     color: #777777;
@@ -45,26 +46,57 @@ h2 {
 
 }
 
-div {
-    text-align: left;
-    border:2px solid #dddddd; 
-    background-color: #ffffff;
+.header { 
+    border: 0px; 
+    margin: 0px 0px 0px 0px;
+    padding: 0;
+    right: 0;
+    left: 0;
+    width: 100%; 
     max-width: 960px;
-    padding: 25px;
-    margin: 25px;
-    float: left;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    background-color: #ffffff;
+    text-align: center;
+    overflow: hidden;
+   
+    border-bottom: 3px solid #cccccc;
 }
 
 .links {
     float: right;
-    margin: 10px;
+    margin: 5px;
+    margin-top: 50px; 
     text-decoration: none;
     color: #777777; 
+    max-width: 960px;
 }
 
 img { max-width: 200px;
         max-height: 200px;
         float: left;
         padding: 5px;
+}
+
+.container {
+    color: #777777;
+    background-color: #ffffff;
+    padding: 5px;
+    max-width: 960px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    border: 0px;
+    overflow: auto;
+    float: left;
+
+}
+
+input[type=submit] {padding:5px 15px; background:#4aaaa5; border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    color: #ffffff;
+    float: left;
+    max-width: 100px;
+    margin: 10px 0px 10px 0px;
+}
+input {
+    margin: 10px 0px 10px 0px;
 }
