fixed small css error-extra characters

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,10 +54,10 @@ h2 {
     margin: 0px 0px 25px 0px;
      padding: 0px 281px 0px 281px;
      right: 0;
-   /* /*left: 0; */
+    /*left: 0; */
     width: 100%; 
     max-width: 960px;
-    height: 119px;; */
+    height: 119px;
     background-color: #ffffff;
     text-align: center;
     /* overflow: hidden; */
