--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,9 @@ div {
     background-color: #ffffff;
     max-width: 960px;
     padding: 25px;
-    /* margin: 25px 0px 25px 0px; */
+    margin-left: auto;
+    margin-right: auto;
+    margin: 25px 0px 25px 281px;
     float: left;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -12,7 +14,6 @@ div {
 body {
     color: #777777;
     background-color: #ffffff;
-    /* margin: 0% 15% 0% 15%; */
     background-image: url(../images/prism.png);
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -85,6 +86,7 @@ img { max-width: 200px;
     background-color: #ffffff;
     padding: 5px;
     max-width: 960px;
+    margin: 0px 0px 0px 0px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     border: 0px;
     overflow: auto;
@@ -109,4 +111,9 @@ input[type=submit] {padding:5px 15px; background:#4aaaa5; border:0 none;
 
 .my-name h1{
     vertical-align: middle;
+}
+
+.grid {
+    margin: 0 0 0 0;
+    border: 0;
 }
