--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ h1 {
     vertical-align: middle;
     margin: 0;
     top: 0;
-    width: 17%;
+    width: 23%;
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
@@ -61,7 +61,6 @@ h2 {
     height: 119px;
     background-color: #ffffff;
     text-align: center;
-    /* overflow: hidden; */
     border-bottom: 3px solid #cccccc;
     top: 0%;
 
@@ -83,6 +82,7 @@ img { max-width: 200px;
         max-height: 200px;
         float: left;
         padding: 5px;
+    
 }
 
 .container {
@@ -133,3 +133,25 @@ textarea {
     height: 200px;
 }
 
+.absolute {
+position: absolute;
+background-color: #4aaaa5;
+color: #dddddd;
+border: 0;
+width: 200px;
+height: 50px;
+margin: 0;
+padding: 0%;
+}
+
+.portfolio {
+    text-align: left;
+    border:0; 
+    background-color: #ffffff;
+    max-width: 500;
+    margin-left: auto;
+    margin-right: auto;
+    margin: 0px;
+    float: left;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
