--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ body {
     background-color: #ffffff;
     background-image: url(../images/prism.png);
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    margin: 0;
 }
 
 p {
@@ -148,10 +149,43 @@ padding: 0%;
     text-align: left;
     border:0; 
     background-color: #ffffff;
-    max-width: 500;
+    max-width: 500px;
     margin-left: auto;
     margin-right: auto;
     margin: 0px;
     float: left;
+    max-height: 10000px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 0;
+    padding-left: 10px;
+
+}
+
+.column {
+    flex: 40%;
+    margin: 0px;
+    background-color: #ffffff;
+    border:0;
+    max-width: 100%;
+    float: left;
+    padding: 0;
+    float: left;
+    margin-top: 0;
+
+}
+.stuff {
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+.superbox {
+    max-width: 500px;
+    margin: 0;
+    border: 0;
+    
+}
+
+span {
+
+    margin-right: 425px;
 }
