--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@ div {
     border:2px solid #dddddd; 
     background-color: #ffffff;
     max-width: 960px;
-    padding: 25px;
     margin-left: auto;
     margin-right: auto;
     margin: 25px 0px 25px 281px;
@@ -22,9 +21,10 @@ body {
 p {
     color: #777777;
     background-color: #ffffff;
-    margin: 0% 15% 0% 15%; 
-    max-width: 960px;
-    min-width: 960px;
+    max-width: 910px;
+    min-width: 910px;
+    padding-right: 25px;
+    padding-left: 25px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
       
 }
@@ -41,6 +41,8 @@ h1 {
 }
 
 h2 {
+    margin-right: 25px;
+    margin-left: 25px;
     color: #4aaaa5;
     background-color: #ffffff;
     font-weight: bolder;
@@ -59,7 +61,6 @@ h2 {
     left: 0;
     width: 100%; 
     max-width: 960px;
-    height: 119px;
     background-color: #ffffff;
     text-align: center;
     border-bottom: 3px solid #cccccc;
@@ -72,7 +73,7 @@ h2 {
 .links {
     float: right;
     margin: 5px;
-    margin-top: 50px; 
+    margin-top: 30px; 
     text-decoration: none;
     color: #777777; 
     max-width: 960px;
@@ -83,10 +84,13 @@ img { max-width: 200px;
         max-height: 200px;
         float: left;
         padding: 5px;
+        padding-left: 25px;
     
 }
 
 .container {
+    padding-right: 25px;
+    padding-left: 25px;
     color: #777777;
     background-color: #ffffff;
     padding: 5px;
@@ -107,9 +111,12 @@ input[type=submit] {padding:5px 15px; background:#4aaaa5; border:0 none;
     float: left;
     max-width: 100px;
     margin: 10px 0px 10px 0px;
+    margin-left: 25px;
 }
 
 .my-name{
+    padding-top: 19px;
+    padding-bottom: 19px;
    align-items: center;
    justify-content: center;
 }
@@ -127,11 +134,14 @@ input {
     width: 910px;
     margin-bottom: 10px;
     margin-top: 3px;
+    margin-left: 25px;
 }
 
 textarea {
-    width: 910px;
+    width: 885px;
     height: 200px;
+    padding-left: 25px;
+    margin-left: 25px;
 }
 
 .absolute {
@@ -186,6 +196,13 @@ padding: 0%;
 }
 
 span {
+    padding-right: 25px;
+    padding-left: 25px;
 
     margin-right: 425px;
+}
+
+label {
+    padding-left: 25px;
+
 }
