--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
 }
 
 p {
+    text-align: justify;
     color: #777777;
     background-color: #ffffff;
     max-width: 910px;
@@ -94,12 +95,25 @@ h2 {
     padding: 0%;
 }
 
+
+.page-links{
+    text-decoration: none;
+}
+
 img { max-width: 300px;
         max-height: 300px;
         float: left;
         padding: 5px;
         padding-left: 25px;
     
+}
+
+.img2 { max-width: 300px;
+    max-height: 300px;
+    float: left;
+    padding: 5px;
+    padding-left: 25px;
+    padding-right: 20px;
 }
 
 .container {
@@ -233,7 +247,7 @@ label {
     text-align: center;
     background-color: #666666;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    height: 25px;
+    height: 50px;
     border: 0px;
     border-top: 8px solid #4aaaa5;
     margin: 0;
