--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,14 +52,13 @@ h2 {
     border-bottom: #cccccc 3px solid;
     padding: 0px 0px 20px 0px;
     font-family: 'Georgia', Times, Times New Roman, serif;
-
 }
 
 .header { 
     border: 0px; 
     margin: 0px 0px 0px 0px;
-     padding: 0px 279px 0px 280px;
-     right: 0;
+    padding: 0px 279px 0px 280px;
+    right: 0;
     left: 0;
     width: 100%; 
     max-width: 960px;
@@ -95,20 +94,20 @@ h2 {
     padding: 0%;
 }
 
-
 .page-links{
     text-decoration: none;
 }
 
-img { max-width: 300px;
-        max-height: 300px;
-        float: left;
-        padding: 5px;
-        padding-left: 25px;
-    
+img {
+    max-width: 300px;
+    max-height: 300px;
+    float: left;
+    padding: 5px;
+    padding-left: 25px;
 }
 
-.img2 { max-width: 300px;
+.img2 { 
+    max-width: 300px;
     max-height: 300px;
     float: left;
     padding: 5px;
@@ -128,10 +127,10 @@ img { max-width: 300px;
     border: 0px;
     overflow: auto;
     float: left;
-
 }
 
-input[type=submit] {padding:5px 15px; background:#4aaaa5; border:0 none;
+input[type=submit] {
+    padding:5px 15px; background:#4aaaa5; border:0 none;
     cursor:pointer;
     -webkit-border-radius: 5px;
     border-radius: 5px;
@@ -173,17 +172,17 @@ textarea {
 }
 
 .absolute {
-position: absolute;
-background-color: #4aaaa5;
-color: #ffffff;
-font-size: 30px;
-text-align: center;
-border: 0;
-width: 300px;
-height: auto;
-padding-top: 15px;
-padding-bottom: 15px;
-margin: 0;
+    position: absolute;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    font-size: 30px;
+    text-align: center;
+    border: 0;
+    width: 300px;
+    height: auto;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin: 0;
 }
 
 .portfolio {
@@ -199,7 +198,6 @@ margin: 0;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     padding: 0;
     padding-left: 10px;
-
 }
 
 .column {
@@ -212,8 +210,8 @@ margin: 0;
     padding: 0;
     float: left;
     margin-top: 0;
-
 }
+
 .stuff {
     margin-bottom: 0;
     margin-top: 0;
@@ -222,8 +220,7 @@ margin: 0;
 .superbox {
     max-width: 700px;
     margin: 0;
-    border: 0;
-    
+    border: 0; 
 }
 
 span {
@@ -235,9 +232,7 @@ span {
 
 label {
     padding-left: 25px;
-
 }
-
 
 .footer {
     position: fixed;
@@ -253,9 +248,9 @@ label {
     margin: 0;
     padding: 0;
     max-width: none;
- }
+}
 
- .bottom {
+.bottom {
     text-align: center;
     border: 0;
     margin: 0;
@@ -265,24 +260,28 @@ label {
     color: #ffffff;
     background-color: #666666;
     font-size: 10px;
- }
+}
 
- .project-1 {
+.project-1 {
      top: 329px;
      left: 308px;
- }
- .project-2 {
+}
+
+.project-2 {
     top: 329px;
     left: 638px;
 }
+
 .project-3 {
     top: 539px;
     left: 308px;
 }
+
 .project-4 {
     top: 539px;
     left: 638px;
 }
+
 .project-5 {
     top: 749px;
     left: 308px;
