--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ p {
     padding-right: 25px;
     padding-left: 25px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    line-height: 1.75;
       
 }
 
@@ -104,6 +105,7 @@ img {
     float: left;
     padding: 5px;
     padding-left: 25px;
+    margin-bottom: 25px;
 }
 
 .img2 { 
@@ -273,16 +275,16 @@ label {
 }
 
 .project-3 {
-    top: 539px;
+    top: 564px;
     left: 308px;
 }
 
 .project-4 {
-    top: 539px;
+    top: 564px;
     left: 638px;
 }
 
 .project-5 {
-    top: 749px;
+    top: 799px;
     left: 308px;
 }
